Работает все кроме
Пропадает последнее сообщение
Идентификатор пользователя Future

--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.0
   firebase_database: ^10.2.1
+  string_to_hex: ^0.2.2
+  timeago: ^3.4.0
+  shared_preferences: ^2.1.1
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
