--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   timeago: ^3.4.0
   shared_preferences: ^2.1.1
   uuid: ^3.0.7
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.4
+  freezed: ^2.3.4
+  json_serializable: ^6.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
