--- a/messenger/.gitignore
+++ b/messenger/.gitignore
@@ -42,3 +42,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Mac
+.DS_Store
+
+#Freezed
+*.g.dart 
+*.freezed.dart
