--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   uuid: ^3.0.7
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
