--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
   provider: ^6.0.5
+  firebase_storage: ^11.2.2
+  image_picker: ^0.8.9
 
 dev_dependencies:
   flutter_test:
