--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -40,9 +40,9 @@ dependencies:
   uuid: ^3.0.7
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
-  provider: ^6.0.5
   firebase_storage: ^11.2.2
   image_picker: ^0.8.9
+  get_it: ^7.6.0
 
 dev_dependencies:
   flutter_test:
