добавил веб вью на экране settings

--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.2.2
   image_picker: ^0.8.9
   get_it: ^7.6.0
+  webview_flutter: ^4.2.2
 
 dev_dependencies:
   flutter_test:
