--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.9
   get_it: ^7.6.0
   webview_flutter: ^4.2.2
+  firebase_ui_auth: ^1.5.0
 
 dev_dependencies:
   flutter_test:
