--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^7.6.0
   webview_flutter: ^4.2.2
   firebase_ui_auth: ^1.5.0
+  firebase_auth: ^4.6.3
 
 dev_dependencies:
   flutter_test:
