--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   webview_flutter: ^4.2.2
   firebase_ui_auth: ^1.5.0
   firebase_auth: ^4.6.3
+  flutter_map: ^5.0.0
+  latlong2: ^0.9.0
 
 dev_dependencies:
   flutter_test:
