--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_auth: ^4.6.3
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
