--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
   geolocator: ^9.0.2
+  firebase_messaging: ^14.6.5
 
 dev_dependencies:
   flutter_test:
