--- a/messenger/pubspec.yaml
+++ b/messenger/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
@@ -49,15 +50,23 @@ dependencies:
   flutter_map: ^5.0.0
   latlong2: ^0.9.0
   geolocator: ^9.0.2
+  firebase_messaging: ^14.6.5
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.15
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.4
   freezed: ^2.3.4
   json_serializable: ^6.7.0
+  build_runner: ^2.4.6
+  isar_generator: ^3.1.0+1
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
