--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
   flutter_riverpod: ^2.3.6
+  flutter_native_splash: ^2.0.1
+
 
 
 
@@ -67,6 +69,13 @@ dev_dependencies:
   json_serializable: ^6.7.0
   build_runner: ^2.4.6
   isar_generator: ^3.1.0+1
+
+
+# flutter pub run flutter_native_splash:create
+# OR dart run flutter_native_splash:create
+flutter_native_splash:
+  color: "#FF00FF"
+  image: assets/splash.png
 
 
 # For information on the generic Dart part of this file, see the
