--- a/final_project/pubspec.yaml
+++ b/final_project/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.0.15
   flutter_riverpod: ^2.3.6
-  flutter_native_splash: ^2.0.1
+
 
 
 
@@ -69,13 +69,26 @@ dev_dependencies:
   json_serializable: ^6.7.0
   build_runner: ^2.4.6
   isar_generator: ^3.1.0+1
+  flutter_native_splash: ^2.0.1
+  flutter_launcher_icons: “^0.8.0”
 
 
 # flutter pub run flutter_native_splash:create
 # OR dart run flutter_native_splash:create
 flutter_native_splash:
-  color: "#FF00FF"
+  color: "#FFFFFF"
+  # color_dark: "#281b60"
   image: assets/splash.png
+
+
+  # Без android_12 не отработало на эмуляторе
+  android_12:
+    color: "#000000"
+    # icon_background_color: "#281b60"
+    # icon_background_color_dark: "#281b60"
+    image: assets/splashAndroid12.png
+
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -90,7 +103,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
